<resources>
    <string name="app_name">Project731</string>
    <string name="title_activity_maps">Map</string>
    <string name="UserName">Username</string>
    <string name="Login">Login</string>
    <string name="temp"> Temporary for the local creation of the shoe list if not made yet</string>
    <string name="enter_email">Enter email</string>
    <string name="register_question">Need to register an account? Click here!</string>
    <string name="login_question">Already have an account? Click here!</string>
    <string name="password_confirm">Confirm password</string>
    <string name="password_type">Type password containing at least 6 characters</string>
    <string name="splash">Shoeters Shoot</string>
    <string name="logout">Log out</string>
    <string name="back">BACK</string>
    <string name="grail">ADD GRAIL</string>
    <string name="heat">HEAT</string>
    <string name="beat">BEAT</string>
    <string name="match">MATCH</string>
    <string name="shoeListCreate">Create Shoe List</string>
</resources>